--- a/package.json
+++ b/package.json
@@ -56,12 +56,15 @@
     }
   },
   "dependencies": {
-    "vue": "^2.4.2",
+    "@fortawesome/fontawesome-free": "^5.1.0",
     "axios": "^0.16.1",
+    "i": "^0.3.6",
+    "npm": "^6.1.0",
+    "vue": "^2.4.2",
     "vue-electron": "^1.0.6",
     "vue-router": "^2.5.3",
-    "vuex": "^2.3.1",
-    "vuetify": "1.0.0"
+    "vuetify": "1.0.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
