--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "node .electron-vue/build.js && electron-builder",
     "build:dir": "node .electron-vue/build.js && electron-builder --dir",
+    "build:win": "node .electron-vue/build.js && electron-builder --windows",
     "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
     "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
     "dev": "node .electron-vue/dev-runner.js",
@@ -49,7 +50,7 @@
       "icon": "build/icons/icon.icns"
     },
     "win": {
-      "target": "portable",
+      "target": "zip",
       "icon": "build/icons/icon.ico"
     },
     "linux": {
